# dune-FRGDG

./: .gitmodules  README.md  build-debug.sh  build-release.sh  install.sh  patch.sh  setup.sh
dune-FRGDG/: .gitignore  CMakeLists.txt  config.h.cmake  dune-FRGDG.pc.in  dune.module
dune-FRGDG/cmake/modules/: CMakeLists.txt
dune-FRGDG/doc/doxygen/: Doxylocal
dune-FRGDG/dune/: CMakeLists.txt
dune-FRGDG/dune/FRGDG/: .vimrc  CMakeLists.txt  FRGDG.hh  simulation.hh  simulationmgr.hh
dune-FRGDG/dune/FRGDG/common/: CMakeLists.txt  logger.hh  typeFactory.hh  utils.hh
dune-FRGDG/dune/FRGDG/grid/: gridConstructor.hh  gridDataAccessor.hh  interpolationArguments.hh
dune-FRGDG/dune/FRGDG/integrationscheme/: DGScheme.hh  LDGScheme.hh
dune-FRGDG/dune/FRGDG/localoperator/: CMakeLists.txt  DG_LOP_ConEq.hh  DG_TLOP_ConEq.hh  LDG_LOP_ConEq.hh  LDG_LOP_ConEq_stat.hh
dune-FRGDG/dune/FRGDG/math/: integration.hh  thermodynamicEquations.hh
dune-FRGDG/dune/FRGDG/model/: CMakeLists.txt  ON.hh  anharmonicOscillator.hh  largeN.hh  modelInterface.hh  modelInterfaceLDG.hh  setInterface.hh
dune-FRGDG/dune/FRGDG/numericalflux/: CMakeLists.txt  LLFFlux.hh  centralFlux.hh  downwindFlux.hh  fluxInterface.hh  upwindFlux.hh
dune-FRGDG/dune/FRGDG/solver/: CMakeLists.txt  DGTimeController.hh  driver.hh  explicitonestepLDG.hh  getIntersection.hh  instationaryPDE.hh  ovlpistlsolverbackend_extension.hh  rejectStep.hh  stationaryPDE.hh
dune-FRGDG/src/: CMakeLists.txt  generateSource.sh
dune-FRGDG/src/common/: logger.cc  utils.cc
dune-FRGDG/src/executables/: dune-ON.cc  dune-anharmonicOscillator.cc  dune-largeN.cc
dune-FRGDG/src/ini/: CMakeLists.txt  ON.ini  anharmonicOscillator.ini  largeN.ini
opts/: opts-debug  opts-release
patcher/dune-alugrid/dune/alugrid/common/: structuredgridfactory.hh
patcher/dune-common/dune/common/parallel/: mpihelper.hh
patcher/dune-pdelab/dune/pdelab/finiteelement/: qkdglegendre.hh
